syntax = "proto3";
package proto;

option go_package = "github.com/veraison/services/proto";

message AttestationToken {
	string tenant_id = 1;
	bytes data = 3;
	string media_type = 4;
	bytes nonce = 5;
	bool tee_report = 6;
}
